--- a/collection-sdk/build.gradle
+++ b/collection-sdk/build.gradle
@@ -25,5 +25,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    api 'com.github.zhouhoude:sx-sdk:V1.0.0'
     api 'com.alibaba:fastjson:1.1.71.android'
 }
